--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
     </header>
 
-    <section class="hero" style="background-image: url('airplane-background.jpg');">
-        <div class="hero-overlay"></div>
-        <div class="container hero-content">
-            <h1 class="hero-title">O Seu Futuro Começa Aqui.</h1>
-            <p class="hero-subtitle">Concretize o sonho de estudar no exterior com o nosso apoio especializado.</p>
+    <section class="fundo" style="background-image: url('img/f3.jpg')">
+        <div class="fundo-overlay"></div>
+        <div class="container fundo-content">
+            <h1 class="fundo-title">O Seu Futuro Começa Aqui.</h1>
+            <p class="fundo-subtitle">Concretize o sonho de estudar no exterior com o nosso apoio especializado.</p>
             <a href="#contact" class="btn btn-primary animate-scale">Fale Conosco</a>
         </div>
     </section>
@@ -74,18 +74,18 @@
     <section id="contact" class="section contact-section">
         <div class="container">
             <h2 class="section-title animate-slide-in">Fale Conosco</h2>
-            <div class="contact-info-grid">
+           <div class="contact-info-grid">
                 <div class="contact-item animate-fade-in">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Localização:<br> Cidade de Maputo, Maputo, Moçambique</p>
+                    <p>Localização:<br>Cidade de Maputo, Maputo, Moçambique</p>
                 </div>
                 <div class="contact-item animate-fade-in delay-2">
                     <i class="fas fa-phone"></i>
-                    <p<a href="tel:+258840229137" class="contact-link">+258 84 022 9137</a></p>
+                    <p>Telefone:<br> <a href="tel:+258840229137" class="contact-link">+258 84 022 9137</a></p>
                 </div>
                 <div class="contact-item animate-fade-in delay-4">
                     <i class="fas fa-envelope"></i>
-                    <p>Email:<br> <a href="mailto:bolsasparaestudarfora@gmail.com">bolsasparaestudarfora@gmail.com</a></br></p>
+                    <p>Email:<br> <a href="mailto:bolsasparaestudarfora@gmail.com" class="contact-link">bolsasparaestudarfora@gmail.com</a></p>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-logo">
-                <img src="logo.jpg" alt="Scholarship Dreams Logo">
+                <img src="img/logo.jpg" alt="Scholarship Dreams Logo">
                 <p>© 2025 Scholarship Dreams. Todos os direitos reservados.</p>
             </div>
 
@@ -119,7 +119,7 @@
                     <a href="https://t.me/+6mI3104vONxhZDc0" target="_blank" class="social-icon" title="Telegram">
                         <i class="fab fa-telegram-plane"></i>
                     </a>
-                    <a href="#" target="_blank" class="social-icon" title="Facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100094196853385" target="_blank" class="social-icon" title="Facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                 </div>
