--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container nav-container">
             <div class="logo-area">
-                <img src="img/logo.jpg" alt="Scholarship Dreams Logo" class="logo-img">
+                <img src="img/logo-Photoroom.png" alt="Scholarship Dreams Logo" class="logo-img">
                 <span class="logo-text">SCHOLARSHIP DREAMS</span>
             </div>
             
@@ -21,9 +21,9 @@
             </button>
 
             <nav class="nav-menu" id="nav-menu">
-                <a href="#about">Sobre Nós</a>
-                <a href="#services">Bolsas</a>
-                <a href="#contact">Contacto</a>
+                <a href="#sobre">Sobre Nós</a>
+                <a href="#bolsas">Bolsas</a>
+                <a href="#contacto">Contacto</a>
             </nav>
         </div>
     </header>
@@ -37,7 +37,7 @@
         </div>
     </section>
 
-    <section id="about" class="section about-section">
+    <section id="sobre" class="section about-section">
         <div class="container">
             <h2 class="section-title animate-slide-in">Sobre a Scholarship Dreams</h2>
             <div class="about-content">
@@ -48,7 +48,7 @@
         </div>
     </section>
 
-    <section id="services" class="section services-section">
+    <section id="bolsas" class="section services-section">
         <div class="container">
             <h2 class="section-title animate-slide-in">O Nosso Apoio</h2>
             <div class="services-grid">
@@ -70,8 +70,19 @@
             </div>
         </div>
     </section>
+    <section class="comentarios">
+        <h4>Vídeos em destaque</h4>
+        <div class="videos">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zGH6z2EcwC8?si=dGsXGo2oA7pwQ5rF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    <section id="contact" class="section contact-section">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/utaQr2NykME?si=RPVnbmw3O7Bzj0SA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VuS4rj9Kjh0?si=XpycwwUPYtXuyYfh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SrDrIkYOdHU?si=76KJJi0UpBENgC1v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section id="contacto" class="section contact-section">
         <div class="container">
             <h2 class="section-title animate-slide-in">Fale Conosco</h2>
            <div class="contact-info-grid">
