Adicionei uma seccao de vidoes em destaque

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </section>
-    <section class="comentarios">
+    <section class="destaque ">
         <h4>Vídeos em destaque</h4>
         <div class="videos">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/zGH6z2EcwC8?si=dGsXGo2oA7pwQ5rF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
