Adicionei um link para o mapa de localizacao que ao ser clicado leva o usuario para uma outra pagina de navegacao

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="#sobre">Sobre Nós</a>
                 <a href="#bolsas">Bolsas</a>
                 <a href="#contacto">Contacto</a>
+                <a href="#">Assistência</a>
             </nav>
         </div>
     </header>
@@ -88,7 +89,7 @@
            <div class="contact-info-grid">
                 <div class="contact-item animate-fade-in">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Localização:<br>Cidade de Maputo, Maputo, Moçambique</p>
+                    <p>Localização:<br><a href="https://www.google.com/maps/dir/-25.919488,32.5484544/-25.97456,32.57327/@-25.9457539,32.5241597,13z/data=!3m1!4b1!4m4!4m3!1m1!4e1!1m0?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D" target="_blank">Cidade de Maputo, Maputo, Moçambique</a></p>
                 </div>
                 <div class="contact-item animate-fade-in delay-2">
                     <i class="fas fa-phone"></i>
