correcao de link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container fundo-content">
             <h1 class="fundo-title">O Seu Futuro Começa Aqui.</h1>
             <p class="fundo-subtitle">Concretize o sonho de estudar no exterior com o nosso apoio especializado.</p>
-            <a href="#contact" class="btn btn-primary animate-scale">Fale Conosco</a>
+            <a href="#contacto" class="btn btn-primary animate-scale">Fale Conosco</a>
         </div>
     </section>
 
